# todo-axum-askama-htmx

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  readme.adoc
assets/: tailwind.css
src/: main.rs  routes.rs
src/models/: mod.rs
src/templates/: global_template.rs  index_template.rs  mod.rs  todo_template.rs
templates/: index.html  todo_create_modal.html  todo_edit.html  todo_edit_modal.html  todo_list.html
