[package]
name = "todo-axum-askama-htmx"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
askama = "0.12.1"
axum = "0.6.20"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
# https://users.rust-lang.org/t/axum-and-tower-http-middleware-issues/102908
tower-http = { version = "0.4.4", features = ["fs"] }
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
chrono = { version = "0.4.31", features = ["serde"] }