[package]
name = "todo-axum-askama-htmx"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
askama = "0.12.1"
axum = "0.7.2"
tokio = { version = "1.35.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
chrono = { version = "0.4.31", features = ["serde"] }